@@ -156,6 +156,18 @@ systemctl start network.service</screen>
    </para>
   </section>
 
+  <section>
+   <!-- bnc#897847 -->
+   <title>Unbranded Grub2 on New Installs From Live</title>
+   <para>
+    A bug in YaST prevent the branding in GRUB2 bootloader when
+    installed from the LiveCD medium.  Actually the preferred way to
+    install openSUSE 13.2 is using the DVD or the NET install. Both
+    mediums generate a proper branded bootloader during the
+    installation.
+   </para>
+  </section>
+
  <section id="general">
   <title>General</title>
   <para/>
